Update .gitignore to include additional Terraform, AWS, IDE, OS, and log files, and enhance README with project overview, technologies, usage instructions, and security measures for the DevOps challenge.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,26 @@
+# Terraform
 .terraform/
+*.tfstate
+*.tfstate.*
+*.tfvars
+.terraformrc
+terraform.rc
 .terraform.lock.hcl
+
+# AWS
+.aws/
+*.pem
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+logs/
